Add Pipeline behaviors

--- a/CarInventory/CarInventory.Api/appsettings.json
+++ b/CarInventory/CarInventory.Api/appsettings.json
@@ -23,13 +23,24 @@
         "Args": {
           "path": "./logs/log-.txt",
           "rollingInterval": "Day",
+          "retainedFileCountLimit": 7, // Retain logs for the last 7 days
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+
         }
       },
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj} [TraceId: {TraceId}] {NewLine}{Exception}"
+
+        }
+      }
+    ],
+    "Filter": [
+      {
+        "Name": "ByExcluding",
+        "Args": {
+          "expression": "Contains(@Message, 'HTTP GET')"
         }
       }
     ],
