--- a/CarInventory/CarInventory.UnitTests/CarInventory.UnitTests.csproj
+++ b/CarInventory/CarInventory.UnitTests/CarInventory.UnitTests.csproj
@@ -11,12 +11,16 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CarInventory.Api\CarInventory.Api.csproj" />
     <ProjectReference Include="..\CarInventory.Application\CarInventory.Application.csproj" />
     <ProjectReference Include="..\CarInventory.Domain\CarInventory.Domain.csproj" />
     <ProjectReference Include="..\CarInventory.Infrastructure\CarInventory.Infrastructure.csproj" />
