--- a/cicd/ci.yml
+++ b/cicd/ci.yml
@@ -8,10 +8,10 @@ variables:
 - template: common-variables.yml  # Use the appropriate variables file
 
 steps:
-- task: UseDotNet@2s
+- task: UseDotNet@2
   inputs:
     packageType: 'sdk'
-    version: '8.0'
+    version: '8.0.x'
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
 - task: DotNetCoreCLI@2
