--- a/cicd/ci.yml
+++ b/cicd/ci.yml
@@ -32,7 +32,7 @@ steps:
   displayName: 'Run Unit Tests'
   inputs:
     command: 'test'
-    projects: '**/*.csproj'
+    projects: 'tests/**/*.csproj'
     arguments: '--configuration $(buildConfiguration) --logger trx --results-directory $(Build.ArtifactStagingDirectory)/TestResults'
 
 - task: PublishTestResults@2
