--- a/cicd/cd.yml
+++ b/cicd/cd.yml
@@ -5,32 +5,24 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-- template: common-variables.yml  
+- template: common-variables.yml
 
 steps:
 - download: current
   artifact: drop
+  displayName: 'Download Artifact'
 
 - task: UseDotNet@2
+  displayName: 'Install .NET SDK 8.0'
   inputs:
     packageType: 'sdk'
     version: '8.0'
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'publish'
-    projects: '**/*.csproj'
-    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
-
 - task: AzureRmWebAppDeployment@4
+  displayName: 'Deploy to Azure Web App'
   inputs:
     azureSubscription: $(azureSubscription)
     appType: 'webApp'
     WebAppName: $(appServiceName)
-    packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
+    packageForLinux: '$(Pipeline.Workspace)/drop/**/*.zip'
