--- a/cicd/cd.yml
+++ b/cicd/cd.yml
@@ -1,3 +1,8 @@
+resources:
+  pipelines:
+    - pipeline: ciPipeline  
+      source: Pipeline-Ci  
+
 trigger:
 - main
 
@@ -8,9 +13,9 @@ variables:
 - template: common-variables.yml
 
 steps:
-- download: current
+- download: ciPipeline
   artifact: drop
-  displayName: 'Download Artifact'
+  displayName: 'Download Artifact from CI Pipeline'
 
 - task: UseDotNet@2
   displayName: 'Install .NET SDK 8.0'
@@ -20,7 +25,7 @@ steps:
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
 - task: AzureRmWebAppDeployment@4
-  displayName: 'Deploy to Azure Web App.'
+  displayName: 'Deploy to Azure Web App'
   inputs:
     azureSubscription: $(azureSubscription)
     appType: 'webApp'
