--- a/cicd/cd.yml
+++ b/cicd/cd.yml
@@ -21,7 +21,7 @@ steps:
   displayName: 'Install .NET SDK 8.0'
   inputs:
     packageType: 'sdk'
-    version: '8.0'
+    version: '8.0.x'
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
 - task: AzureRmWebAppDeployment@4
