update ci and cd

--- a/cicd/cd.yml
+++ b/cicd/cd.yml
@@ -30,4 +30,4 @@ steps:
     azureSubscription: $(azureSubscription)
     appType: 'webApp'
     WebAppName: $(appServiceName)
-    packageForLinux: '$(Pipeline.Workspace)/drop/**/*.zip'
+    packageForLinux: '$(Pipeline.Workspace)/drop/publish.zip'
