--- a/cicd/ci.yml
+++ b/cicd/ci.yml
@@ -49,10 +49,17 @@ steps:
     projects: '**/*.csproj'
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/publish'
 
+- task: ArchiveFiles@2
+  displayName: 'Archive Published Files'
+  inputs:
+    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/publish'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/publish/publish.zip'
+    replaceExistingArchive: true
 
 - task: PublishPipelineArtifact@1
   displayName: 'Publish Build Artifacts'
   inputs:
     targetPath: '$(Build.ArtifactStagingDirectory)/publish'
     artifact: 'drop'
-
