--- a/cicd/ci.yml
+++ b/cicd/ci.yml
@@ -28,6 +28,13 @@ steps:
     projects: '**/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
 
+- task: CopyFiles@2
+  displayName: 'Copy Files to Staging Directory'
+  inputs:
+    SourceFolder: '$(Build.BinariesDirectory)'
+    Contents: '**'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/drop'
+    
 - task: PublishPipelineArtifact@1
   displayName: 'Publish Build Artifact'
   inputs:
