--- a/cicd/ci.yml
+++ b/cicd/ci.yml
@@ -31,8 +31,8 @@ steps:
 - task: CopyFiles@2
   displayName: 'Copy Files to Staging Directory'
   inputs:
-    SourceFolder: '$(Build.BinariesDirectory)'
-    Contents: '**'
+    SourceFolder: '$(Build.SourcesDirectory)'  # Root of the repository
+    Contents: '**/bin/$(buildConfiguration)/**'  # Files from the build configuration
     TargetFolder: '$(Build.ArtifactStagingDirectory)/drop'
     
 - task: PublishPipelineArtifact@1
