Minor tweaks and adjustments

--- a/CarInventory/CarInventory.Api/appsettings.json
+++ b/CarInventory/CarInventory.Api/appsettings.json
@@ -49,5 +49,24 @@
       "Application": "CarInventory"
     }
   },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "GET:/api/v1/Car",
+        "Period": "1m",
+        "Limit": 5
+      },
+      {
+        "Endpoint": "Get:/api/v1/ThirdPartyIntegration/ImportCars",
+        "Period": "1m",
+        "Limit": 1
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
