--- a/CarInventory/CarInventory.Api/CarInventory.Api.csproj
+++ b/CarInventory/CarInventory.Api/CarInventory.Api.csproj
@@ -12,6 +12,7 @@
 	<PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
 	<PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
 	<PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="8.0.2" />
+	<PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
 	<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
       <PrivateAssets>all</PrivateAssets>
